updated search results page to hide footer which has too many layout shifts to fix

--- a/styles/fcp.css
+++ b/styles/fcp.css
@@ -129,8 +129,20 @@
   }
 }
 
-body.search .hero-wrapper {
-  padding-block-end: 0;
+body.search {
+  .hero-wrapper {
+    padding-block-end: 0;
+  }
+
+  footer {
+    display: none;
+  }
+
+  &.search-results-loaded {
+    & footer {
+      display: grid;
+    }
+  }
 }
 
 
